# eros-schedule-generator

./: .claudeignore  .coverage  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  EXAMPLES.md  FOLLOWUP_SELECTOR_IMPLEMENTATION.md  INTEGRATED_AGENTS.md  PERFECTION_ROADMAP.md  PHASE_7_CHECKLIST.md  PHASE_7_VERIFICATION_REPORT.md  README.md  SKILL.md  TROUBLESHOOTING.md  VERIFICATION_SUMMARY.txt  caption-selector-redesign-plan.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: _TEMPLATE.md  ab-testing-orchestrator.md  anomaly-detector.md  attention-quality-scorer.md  audience-targeter.md  authenticity-engine.md  caption-optimizer.md  caption-selection-pro.md  content-curator.md  content-performance-predictor.md  followup-generator.md  followup-timing-optimizer.md  funnel-flow-optimizer.md  outcome-tracker.md  performance-analyst.md  ppv-price-optimizer.md  preflight-checker.md  quality-validator-expert.md  quality-validator.md  retention-risk-analyzer.md  revenue-optimizer.md  schedule-assembler.md  schedule-critic.md  send-type-allocator.md  timing-optimizer.md  variety-enforcer.md  win-back-specialist.md
.github/workflows/: test.yml
assets/sql/: fresh_caption_loading.sql  fresh_selection_indexes.sql  get_active_creators.sql  get_available_captions.sql  get_creator_profile.sql  get_optimal_hours.sql  get_performance_trends.sql  get_vault_inventory.sql  schema_v3_content_types.sql
assets/styles/: architecture-demo.html  architecture-design-system.css
assets/visual_guide/: ARCHITECTURE_VISUAL.html  ARCHITECTURE_VISUAL.md
config/: business_rules.yaml  content_type_mapping.yaml  selection.yaml
database/: WAVE1_FETISH_THEMED_FINAL_REPORT.md  content_types.json  export_core_tables.py  extract_core_tables.py  send_types.json
database/.claude/: settings.local.json
database/audit/: 007_orphaned_creators_inventory.csv  EROS_DATABASE_AUDIT_REPORT.md  PERFECTION_AUDIT_REPORT_2025-12-12.md  PERFORMANCE_EXECUTIVE_SUMMARY.txt  PERFORMANCE_REPORT.md  PERFORMANCE_SUMMARY.md  WAVE1_DATABASE_INTEGRITY_REPORT.md  misslexa_30day_performance_analysis.md  orphan_records_backup_20251215_232444.txt  performance_tests.sql
database/docs/: CAPTION_BANK_RECLASSIFICATION_PLAN.md  VAULT_MATRIX_WORKFLOW.md  WAVE0_COMPLETION_REPORT.md  WAVE1_COMPLETION_REPORT.md  (+5 more)
docs/: API_REFERENCE.md  CAPTION_SELECTION_EXPLAINED.md  DEPRECATION_GUIDE.md  DOCUMENTATION_FINALIZATION_REPORT.md  DYNAMIC_VOLUME_MIGRATION.md  ENHANCED_SEND_TYPE_ARCHITECTURE.md  EROS_10-10_Perfection_Plan.md  GETTING_STARTED.md  GLOSSARY.md  MCP_API_REFERENCE.md  MCP_DOCUMENTATION_SUMMARY.md  MCP_ERROR_REFERENCE.md  MCP_PERFECTION_PLAN.md  MIGRATION_2.3.0.md  PERFECTED_MASTER_ENHANCEMENT_PLAN.md  PERFECTION_EXECUTION_PLAN.md  SCHEDULE_GENERATOR_BLUEPRINT.md  SECURITY.md  SECURITY_FIXES_2025-12-17.md  SEND_TYPE_REFERENCE.md  USER_GUIDE.md  WAVE5_COMPLETION_REPORT.md  WAVE5_TASKS_5.2_COMPLETION.md  WORKFLOW_VISUAL_GUIDE.md  combined_content_library.json
examples/: batch_schedule_generation.py  creator_config.yaml  demo_followup_selector.py  schedule_full_output.json  schedule_quick_output.json  test_followup_selector.py
mcp/: DEPLOYMENT_GUIDE.md  IMPROVEMENTS_SUMMARY.md  MCP_SERVER_AUDIT_REPORT.md  SECURITY_HARDENING.md  WAVE_1_COMPLETION_REPORT.md  __init__.py  circuit_breaker.py  connection.py  eros_db_server.py  eros_types.py  logging_config.py  metrics.py  protocol.py  rate_limiter.py  rate_limiting_config.example.json  retry.py  server.py  test_contracts.py  test_edge_cases.py  test_error_handling.py  test_load_stress.py  test_rate_limiting.py  test_retry_logic.py  test_security_hardening.py  test_server.py  test_tools.py
pipeline_orchestration_log_review/: eros-schedule-generator-execution-log-for-review.txt
prompts/: caption_selection.md  classification_quick_reference.md  content_classification_prompt.md  system.md  validation.md
python/: REGISTRY_MIGRATION_PLAN.md  __init__.py  exceptions.py  logging_config.py  py.typed  validators.py
references/: 2025_combined_high_value_insights.md  analytics_algorithms.md  architecture-visual-guide.md  architecture.md  database-schema.md  eros_implementation_gap_analysis.md  extraction_map.md  industry-benchmarks.md  scheduling_rules.md  strategy-frameworks.md  validation_report.md
scripts/: __init__.py  agent_invoker.py  analyze_creator.py  apply_llm_insights.py  batch_portfolio_analysis.py  calculate_freshness.py  caption_enhancer.py  classify_content.py  classify_implied_content.py  config_loader.py  content_type_loaders.py  content_type_registry.py  content_type_schedulers.py  content_type_strategy.py  database.py  enrichment.py  exceptions.py  followup_generator.py  generate_perfected_guides.py  generate_schedule.py  hook_detection.py  logging_config.py  match_persona.py  models.py  pattern_extraction.py  pipeline.py  prepare_llm_context.py  quality_scoring.py  schedule_builder.py  schedule_uniqueness.py  select_captions.py  semantic_analysis.py  semantic_boost_cache.py  shared_context.py  utils.py  validate_schedule.py  verify_deployment.py  volume_optimizer.py  volume_validation_report.py  weights.py
tests/: __init__.py  fixtures.py  phase5_test_cases.py  test_caption_selection.py  test_fresh_selection.py  test_integration.py  test_pattern_extraction.py  test_persona_matching.py  test_pipeline.py  test_selection_integration.py  test_validation_complete.py  test_validation_rules.py  test_volume_optimizer.py
(+330 files in other folders)
