[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eros-schedule-generator"
version = "2.2.0"
description = "AI-powered multi-agent schedule generation system for OnlyFans creators"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "EROS Development Team"}
]
keywords = ["scheduling", "content", "automation", "onlyfans", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "jsonschema>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["python*", "mcp*"]

[tool.pytest.ini_options]
testpaths = ["python/tests", "mcp"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=python --cov=mcp --cov-report=html --cov-report=term-missing"
markers = [
    "benchmark: marks tests as performance benchmarks (deselect with '-m \"not benchmark\"')",
    "integration: marks tests as integration tests requiring database",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["python", "mcp"]
omit = [
    "**/tests/*",
    "**/__init__.py",
    "**/examples/*",
    "**/test_*.py",
    "**/conftest.py",
]
branch = true

[tool.coverage.report]
# Core algorithms at 97-98%, MCP tool modules need additional tests in future waves
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "def main\\(\\):",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", "__pycache__", "build", "dist"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # use of assert detected (needed for tests)
]

[tool.ruff.per-file-ignores]
"**/tests/*" = ["S101"]
"mcp/test_*.py" = ["S101"]
